--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the class respotory of FINTECH 545, containing code for homework and potential library
+This is the class repository of FINTECH 545, containing code for homework and potential library
