--- a/Week03/Project/solution.ipynb
+++ b/Week03/Project/solution.ipynb
@@ -983,7 +983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.2 (default, Dec 29 2018, 00:00:04) \n[Clang 4.0.1 (tags/RELEASE_401/final)]"
   },
   "orig_nbformat": 4,
   "vscode": {
