--- a/Week03/Project/solution.ipynb
+++ b/Week03/Project/solution.ipynb
@@ -248,7 +248,7 @@
     "    for i in range(n):\n",
     "        weight[i] = (1-lambd) * (lambd) ** i\n",
     "    normalized_weight = weight / np.sum(weight)\n",
-    "    return normalized_weight\n",
+    "    return normalized_weight[::-1]\n",
     "\n",
     "#next we generate the covariance matrix\n",
     "def cov_gen(data, weight):\n",
